--- a/mystyle.css
+++ b/mystyle.css
@@ -6,34 +6,34 @@
 	
 
 	header {
-		margin: auto;
-		text-align: center;
+	margin: auto;
+	text-align: center;
 	}
 	
 	h1 {
 	font-family: "Quattrocento Sans";
-	font-size: 500%;
+	font-size: 5vw;
 	margin: 50px 5px 5px 5px;
 	font-variant: small-caps;
 	}
 	
 	h2 {
 	font-family: "Quattrocento Sans";
-	font-size: 250%;
+	font-size: 2.5vw;
 	margin: 5px 5px 5px 5px;
 	font-variant: small-caps;
 	}
 	
 	h3 {
 	font-family: "Quattrocento Sans";
-	font-size: 200%;
+	font-size: 2vw%;
 	font-weight: bold;
 	margin: 5px 5px 5px 5px;
 	font-variant: small-caps;
 	}
 	
 	p {
-	font-size: 100%;
+	font-size: 1vw%;
 	}
 	
 	
