--- a/mystyle.css
+++ b/mystyle.css
@@ -26,14 +26,14 @@
 	
 	h3 {
 	font-family: "Quattrocento Sans";
-	font-size: 2vw%;
+	font-size: 2vw;
 	font-weight: bold;
 	margin: 5px 5px 5px 5px;
 	font-variant: small-caps;
 	}
 	
 	p, ul, li {
-	font-size: 1vw%;
+	font-size: 1vw;
 	}
 	
 	
